manifests/iam/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: iam
    spec:
      containers:
      - name: iam
        image: quay.io/airlock/iam:8.4.1
        resources:
          limits:
            memory: "4Gi"
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
      imagePullSecrets:
      - name: alsbraun-pull-secret
