manifests/iam/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam
spec:
  rules:
  - host: "iam-127-0-0-1.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam-service
            port:
              number: 8443
